fwrap/parser/funcwrap_parser.go
// Code generated from FuncWrapParser.g4 by ANTLR 4.7.2. DO NOT EDIT.

package parser // FuncWrapParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'if'", "'else'", "'nil'", "'$'", "", "'func'", "'return'", "'object'",
	"'.'", "", "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", "','", "'||'",
	"'&&'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'!'",
}
var symbolicNames = []string{
	"", "IF", "ELSE", "NIL_LIT", "VAR", "BOOLEAN", "FUNC", "RETURN", "OBJ",
	"DOT", "IDENTIFIER", "L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY", "L_BRACKET",
	"R_BRACKET", "ASSIGN", "COMMA", "LOGICAL_OR", "LOGICAL_AND", "EQUALS",
	"NOT_EQUALS", "LESS", "LESS_OR_EQUALS", "GREATER", "GREATER_OR_EQUALS",
	"EXCLAMATION", "DECIMAL_LIT", "OCTAL_LIT", "HEX_LIT", "FLOAT_LIT", "RAW_STRING_LIT",
	"INTERPRETED_STRING_LIT", "WS", "COMMENT", "TERMINATOR", "LINE_COMMENT",
}

var ruleNames = []string{
	"prog", "pstatement", "statement", "varAssign", "asnVal", "funCall", "funValName",
	"funcName", "funDef", "retStmt", "fVal", "retVal", "rVal", "rVals", "cond",
	"eval", "variable", "array", "arrRef", "op", "literals", "numbers", "objectDef",
	"objMemberRef", "objElement", "objAssign",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type FuncWrapParser struct {
	*antlr.BaseParser
}

func NewFuncWrapParser(input antlr.TokenStream) *FuncWrapParser {
	this := new(FuncWrapParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "FuncWrapParser.g4"

	return this
}

// FuncWrapParser tokens.
const (
	FuncWrapParserEOF                    = antlr.TokenEOF
	FuncWrapParserIF                     = 1
	FuncWrapParserELSE                   = 2
	FuncWrapParserNIL_LIT                = 3
	FuncWrapParserVAR                    = 4
	FuncWrapParserBOOLEAN                = 5
	FuncWrapParserFUNC                   = 6
	FuncWrapParserRETURN                 = 7
	FuncWrapParserOBJ                    = 8
	FuncWrapParserDOT                    = 9
	FuncWrapParserIDENTIFIER             = 10
	FuncWrapParserL_PAREN                = 11
	FuncWrapParserR_PAREN                = 12
	FuncWrapParserL_CURLY                = 13
	FuncWrapParserR_CURLY                = 14
	FuncWrapParserL_BRACKET              = 15
	FuncWrapParserR_BRACKET              = 16
	FuncWrapParserASSIGN                 = 17
	FuncWrapParserCOMMA                  = 18
	FuncWrapParserLOGICAL_OR             = 19
	FuncWrapParserLOGICAL_AND            = 20
	FuncWrapParserEQUALS                 = 21
	FuncWrapParserNOT_EQUALS             = 22
	FuncWrapParserLESS                   = 23
	FuncWrapParserLESS_OR_EQUALS         = 24
	FuncWrapParserGREATER                = 25
	FuncWrapParserGREATER_OR_EQUALS      = 26
	FuncWrapParserEXCLAMATION            = 27
	FuncWrapParserDECIMAL_LIT            = 28
	FuncWrapParserOCTAL_LIT              = 29
	FuncWrapParserHEX_LIT                = 30
	FuncWrapParserFLOAT_LIT              = 31
	FuncWrapParserRAW_STRING_LIT         = 32
	FuncWrapParserINTERPRETED_STRING_LIT = 33
	FuncWrapParserWS                     = 34
	FuncWrapParserCOMMENT                = 35
	FuncWrapParserTERMINATOR             = 36
	FuncWrapParserLINE_COMMENT           = 37
)

// FuncWrapParser rules.
const (
	FuncWrapParserRULE_prog         = 0
	FuncWrapParserRULE_pstatement   = 1
	FuncWrapParserRULE_statement    = 2
	FuncWrapParserRULE_varAssign    = 3
	FuncWrapParserRULE_asnVal       = 4
	FuncWrapParserRULE_funCall      = 5
	FuncWrapParserRULE_funValName   = 6
	FuncWrapParserRULE_funcName     = 7
	FuncWrapParserRULE_funDef       = 8
	FuncWrapParserRULE_retStmt      = 9
	FuncWrapParserRULE_fVal         = 10
	FuncWrapParserRULE_retVal       = 11
	FuncWrapParserRULE_rVal         = 12
	FuncWrapParserRULE_rVals        = 13
	FuncWrapParserRULE_cond         = 14
	FuncWrapParserRULE_eval         = 15
	FuncWrapParserRULE_variable     = 16
	FuncWrapParserRULE_array        = 17
	FuncWrapParserRULE_arrRef       = 18
	FuncWrapParserRULE_op           = 19
	FuncWrapParserRULE_literals     = 20
	FuncWrapParserRULE_numbers      = 21
	FuncWrapParserRULE_objectDef    = 22
	FuncWrapParserRULE_objMemberRef = 23
	FuncWrapParserRULE_objElement   = 24
	FuncWrapParserRULE_objAssign    = 25
)

// IProgContext is an interface to support dynamic dispatch.
type IProgContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgContext differentiates from other interfaces.
	IsProgContext()
}

type ProgContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgContext() *ProgContext {
	var p = new(ProgContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FuncWrapParserRULE_prog
	return p
}

func (*ProgContext) IsProgContext() {}

func NewProgContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgContext {
	var p = new(ProgContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FuncWrapParserRULE_prog

	return p
}

func (s *ProgContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgContext) AllPstatement() []IPstatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IPstatementContext)(nil)).Elem())
	var tst = make([]IPstatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IPstatementContext)
		}
	}

	return tst
}

func (s *ProgContext) Pstatement(i int) IPstatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPstatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IPstatementContext)
}

func (s *ProgContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.EnterProg(s)
	}
}

func (s *ProgContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.ExitProg(s)
	}
}

func (p *FuncWrapParser) Prog() (localctx IProgContext) {
	localctx = NewProgContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, FuncWrapParserRULE_prog)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<FuncWrapParserIF)|(1<<FuncWrapParserVAR)|(1<<FuncWrapParserFUNC)|(1<<FuncWrapParserOBJ)|(1<<FuncWrapParserIDENTIFIER))) != 0) {
		{
			p.SetState(52)
			p.Pstatement()
		}

		p.SetState(55)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IPstatementContext is an interface to support dynamic dispatch.
type IPstatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPstatementContext differentiates from other interfaces.
	IsPstatementContext()
}

type PstatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPstatementContext() *PstatementContext {
	var p = new(PstatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FuncWrapParserRULE_pstatement
	return p
}

func (*PstatementContext) IsPstatementContext() {}

func NewPstatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PstatementContext {
	var p = new(PstatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FuncWrapParserRULE_pstatement

	return p
}

func (s *PstatementContext) GetParser() antlr.Parser { return s.parser }

func (s *PstatementContext) FunDef() IFunDefContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunDefContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFunDefContext)
}

func (s *PstatementContext) Statement() IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *PstatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PstatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PstatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.EnterPstatement(s)
	}
}

func (s *PstatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.ExitPstatement(s)
	}
}

func (p *FuncWrapParser) Pstatement() (localctx IPstatementContext) {
	localctx = NewPstatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, FuncWrapParserRULE_pstatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(59)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case FuncWrapParserFUNC:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(57)
			p.FunDef()
		}

	case FuncWrapParserIF, FuncWrapParserVAR, FuncWrapParserOBJ, FuncWrapParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(58)
			p.Statement()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FuncWrapParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FuncWrapParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Variable() IVariableContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVariableContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVariableContext)
}

func (s *StatementContext) VarAssign() IVarAssignContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVarAssignContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVarAssignContext)
}

func (s *StatementContext) FunCall() IFunCallContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunCallContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFunCallContext)
}

func (s *StatementContext) Cond() ICondContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICondContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICondContext)
}

func (s *StatementContext) ObjectDef() IObjectDefContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IObjectDefContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IObjectDefContext)
}

func (s *StatementContext) ObjAssign() IObjAssignContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IObjAssignContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IObjAssignContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *FuncWrapParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, FuncWrapParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(67)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(61)
			p.Variable()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(62)
			p.VarAssign()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(63)
			p.FunCall()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(64)
			p.Cond()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(65)
			p.ObjectDef()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(66)
			p.ObjAssign()
		}

	}

	return localctx
}

// IVarAssignContext is an interface to support dynamic dispatch.
type IVarAssignContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVarAssignContext differentiates from other interfaces.
	IsVarAssignContext()
}

type VarAssignContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVarAssignContext() *VarAssignContext {
	var p = new(VarAssignContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FuncWrapParserRULE_varAssign
	return p
}

func (*VarAssignContext) IsVarAssignContext() {}

func NewVarAssignContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VarAssignContext {
	var p = new(VarAssignContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FuncWrapParserRULE_varAssign

	return p
}

func (s *VarAssignContext) GetParser() antlr.Parser { return s.parser }

func (s *VarAssignContext) Variable() IVariableContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVariableContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVariableContext)
}

func (s *VarAssignContext) ASSIGN() antlr.TerminalNode {
	return s.GetToken(FuncWrapParserASSIGN, 0)
}

func (s *VarAssignContext) AsnVal() IAsnValContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAsnValContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAsnValContext)
}

func (s *VarAssignContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VarAssignContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VarAssignContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.EnterVarAssign(s)
	}
}

func (s *VarAssignContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.ExitVarAssign(s)
	}
}

func (p *FuncWrapParser) VarAssign() (localctx IVarAssignContext) {
	localctx = NewVarAssignContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, FuncWrapParserRULE_varAssign)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(69)
		p.Variable()
	}
	{
		p.SetState(70)
		p.Match(FuncWrapParserASSIGN)
	}
	{
		p.SetState(71)
		p.AsnVal()
	}

	return localctx
}

// IAsnValContext is an interface to support dynamic dispatch.
type IAsnValContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAsnValContext differentiates from other interfaces.
	IsAsnValContext()
}

type AsnValContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAsnValContext() *AsnValContext {
	var p = new(AsnValContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FuncWrapParserRULE_asnVal
	return p
}

func (*AsnValContext) IsAsnValContext() {}

func NewAsnValContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AsnValContext {
	var p = new(AsnValContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FuncWrapParserRULE_asnVal

	return p
}

func (s *AsnValContext) GetParser() antlr.Parser { return s.parser }

func (s *AsnValContext) RVal() IRValContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRValContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRValContext)
}

func (s *AsnValContext) FuncName() IFuncNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFuncNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFuncNameContext)
}

func (s *AsnValContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AsnValContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AsnValContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.EnterAsnVal(s)
	}
}

func (s *AsnValContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.ExitAsnVal(s)
	}
}

func (p *FuncWrapParser) AsnVal() (localctx IAsnValContext) {
	localctx = NewAsnValContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, FuncWrapParserRULE_asnVal)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(73)
			p.RVal()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(74)
			p.FuncName()
		}

	}

	return localctx
}

// IFunCallContext is an interface to support dynamic dispatch.
type IFunCallContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFunCallContext differentiates from other interfaces.
	IsFunCallContext()
}

type FunCallContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunCallContext() *FunCallContext {
	var p = new(FunCallContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FuncWrapParserRULE_funCall
	return p
}

func (*FunCallContext) IsFunCallContext() {}

func NewFunCallContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FunCallContext {
	var p = new(FunCallContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FuncWrapParserRULE_funCall

	return p
}

func (s *FunCallContext) GetParser() antlr.Parser { return s.parser }

func (s *FunCallContext) FunValName() IFunValNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunValNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFunValNameContext)
}

func (s *FunCallContext) L_PAREN() antlr.TerminalNode {
	return s.GetToken(FuncWrapParserL_PAREN, 0)
}

func (s *FunCallContext) R_PAREN() antlr.TerminalNode {
	return s.GetToken(FuncWrapParserR_PAREN, 0)
}

func (s *FunCallContext) RVals() IRValsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRValsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRValsContext)
}

func (s *FunCallContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunCallContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FunCallContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.EnterFunCall(s)
	}
}

func (s *FunCallContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.ExitFunCall(s)
	}
}

func (p *FuncWrapParser) FunCall() (localctx IFunCallContext) {
	localctx = NewFunCallContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, FuncWrapParserRULE_funCall)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(77)
		p.FunValName()
	}
	{
		p.SetState(78)
		p.Match(FuncWrapParserL_PAREN)
	}
	p.SetState(80)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if ((_la-4)&-(0x1f+1)) == 0 && ((1<<uint((_la-4)))&((1<<(FuncWrapParserVAR-4))|(1<<(FuncWrapParserBOOLEAN-4))|(1<<(FuncWrapParserIDENTIFIER-4))|(1<<(FuncWrapParserL_BRACKET-4))|(1<<(FuncWrapParserDECIMAL_LIT-4))|(1<<(FuncWrapParserOCTAL_LIT-4))|(1<<(FuncWrapParserHEX_LIT-4))|(1<<(FuncWrapParserFLOAT_LIT-4))|(1<<(FuncWrapParserRAW_STRING_LIT-4))|(1<<(FuncWrapParserINTERPRETED_STRING_LIT-4)))) != 0 {
		{
			p.SetState(79)
			p.RVals()
		}

	}
	{
		p.SetState(82)
		p.Match(FuncWrapParserR_PAREN)
	}

	return localctx
}

// IFunValNameContext is an interface to support dynamic dispatch.
type IFunValNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFunValNameContext differentiates from other interfaces.
	IsFunValNameContext()
}

type FunValNameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunValNameContext() *FunValNameContext {
	var p = new(FunValNameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FuncWrapParserRULE_funValName
	return p
}

func (*FunValNameContext) IsFunValNameContext() {}

func NewFunValNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FunValNameContext {
	var p = new(FunValNameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FuncWrapParserRULE_funValName

	return p
}

func (s *FunValNameContext) GetParser() antlr.Parser { return s.parser }

func (s *FunValNameContext) FuncName() IFuncNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFuncNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFuncNameContext)
}

func (s *FunValNameContext) Variable() IVariableContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVariableContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVariableContext)
}

func (s *FunValNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunValNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FunValNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.EnterFunValName(s)
	}
}

func (s *FunValNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FuncWrapParserListener); ok {
		listenerT.ExitFunValName(s)
	}
}

func (p *FuncWrapParser) FunValName() (localctx IFunValNameContext) {
	localctx = NewFunValNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, FuncWrapParserRULE_funValName)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(86)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case FuncWrapParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(84)
			p.FuncName()
		}
